# serializer version: 1
# name: test_hydrological_station
  HydrologicalData(water_level=SensorData(name='Water Level', value=568.0, unit='cm'), flood_alarm_level=SensorData(name='Flood Alarm Level', value=630.0, unit='cm'), flood_warning_level=SensorData(name='Flood Warning Level', value=590.0, unit='cm'), water_temperature=SensorData(name='Water Temperature', value=8.1, unit='°C'), river='Zalew Wiślany', station_id='154190050', station='Nowe Batorowo', water_level_measurement_date=datetime.datetime(2024, 4, 22, 10, 0, tzinfo=datetime.timezone.utc), water_temperature_measurement_date=datetime.datetime(2024, 4, 22, 10, 10, tzinfo=datetime.timezone.utc), flood_alarm=False, flood_warning=False)
# ---
# name: test_hydrological_stations
  dict({
    '149180010': 'Krzyżanowice (Odra)',
    '149180020': 'Chałupki (Odra)',
    '149180030': 'Łaziska (Olza)',
    '149180060': 'Cieszyn (Olza)',
    '149180070': 'Cieszyn (Młynówka)',
    '149180080': 'Drogomyśl (Wisła)',
    '149180090': 'Borki Mizerów (Pszczynka)',
    '149180100': 'Skoczów (Wisła)',
    '149180110': 'Ustroń Obłaziec (Wisła)',
    '149180120': 'Górki Wielkie (Brennica)',
    '149180130': 'Istebna (Olza)',
    '149180140': 'Wisła (Wisła)',
    '149180160': 'Wisła Czarne (Wisła)',
    '149180180': 'Wisła Czarne (Biała Wisełka)',
    '149180200': 'Wisła Czarne (Czarna Wisełka)',
    '149180210': 'Zabrzeg (Wisła)',
    '149180220': 'Pszczyna (Pszczynka)',
    '149180230': 'Podkępie (Wapienica)',
    '149180240': 'Goczałkowice (Wisła)',
    '149180250': 'Czechowice Dziedzice (Iłownica)',
    '149180300': 'Olza (Odra)',
    '149190010': 'Czechowice-Bestwina (Biała)',
    '149190020': 'Kamesznica (Bystra)',
    '149190030': 'Mikuszowice (Biała)',
    '149190040': 'Ujsoły (Woda Ujsolska)',
    '149190050': 'Rajcza (Soła)',
    '149190060': 'Jawiszowice (Wisła)',
    '149190070': 'Łodygowice (Żylica)',
    '149190080': 'Cięcina (Soła)',
    '149190090': 'Żabnica (Żabniczanka)',
    '149190100': 'Żywiec (Soła)',
    '149190120': 'Czaniec (Kobiernice) (Soła)',
    '149190140': 'Łękawica (Łękawka)',
    '149190150': 'Pewel Mała (Koszarawa)',
    '149190160': 'Rudze (Wieprzówka)',
    '149190170': 'Zator (Skawa)',
    '149190180': 'Wadowice (Skawa)',
    '149190200': 'Sucha Beskidzka (Stryszawka)',
    '149190210': 'Sucha Beskidzka 2 (Skawa)',
    '149190220': 'Skawica Dolna (Skawica)',
    '149190230': 'Czernichów - Prom (Wisła)',
    '149190260': 'Osielec (Skawa)',
    '149190270': 'Radziszów (Skawinka)',
    '149190280': 'Koniówka (Czarny Dunajec)',
    '149190290': 'Jordanów (Skawa)',
    '149190300': 'Kościelisko-Kiry (Potok Kościeliski)',
    '149190310': 'Stróża (Raba)',
    '149190340': 'Rabka 2 (Raba)',
    '149190350': 'Krzczonów (Krzczonówka)',
    '149190360': 'Ludźmierz (Lepietnica)',
    '149190370': 'Lubień (Lubieńka)',
    '149190380': 'Zakopane Harenda (Cicha Woda)',
    '149190390': 'Ludźmierz (Wielki Rogoźnik)',
    '149200010': 'Poronin (Poroniec)',
    '149200020': 'Szaflary (Biały Dunajec)',
    '149200030': 'Nowy Targ (Czarny Dunajec)',
    '149200040': 'Kasinka Mała (Raba)',
    '149200050': 'Nowy Targ - Kowaniec (Dunajec)',
    '149200060': 'Mszana Dolna (Raba)',
    '149200080': 'Mszana Dolna (Mszanka)',
    '149200090': 'Dobczyce (Raba)',
    '149200100': 'Łysa Polana (Białka)',
    '149200110': 'Trybsz 2 (Białka)',
    '149200120': 'Niedzica (Niedziczanka)',
    '149200130': 'Stradomka (Stradomka)',
    '149200140': 'Sromowce Wyżne (Dunajec)',
    '149200150': 'Tylmanowa (Ochotnica)',
    '149200160': 'Krościenko (Dunajec)',
    '149200170': 'Proszówki (Raba)',
    '149200190': 'Gołkowice (Dunajec)',
    '149200200': 'Jakubkowice (Łososina)',
    '149200220': 'Stary Sącz (Poprad)',
    '149200230': 'Czchów (Dunajec)',
    '149200240': 'Nowy Sącz (Dunajec)',
    '149200250': 'Nowy Sącz (Kamienica)',
    '149200260': 'Nowy Sącz 1 (Łubinka)',
    '149200270': 'Łabowa (Kamienic)',
    '149200280': 'Zgłobice (Dunajec)',
    '149200290': 'Muszyna (Poprad)',
    '149200310': 'Grybów (Biała)',
    '149200320': 'Koszyce Wielkie (Biała)',
    '149200330': 'Ciężkowice (Biała)',
    '149200360': 'Lipnica Murowana (-)',
    '149200370': 'Brzesko-Okocim (Uszwica)',
    '149200480': 'Łapanów (Stradomka)',
    '149200510': 'Brzesko-Miasto (Uszwica)',
    '149210010': 'Ropa (Ropa)',
    '149210030': 'Klęczany (Ropa)',
    '149210040': 'Łabuzie (Wisłoka)',
    '149210050': 'Krajowice (Wisłoka)',
    '149210060': 'Topoliny (Ropa)',
    '149210070': 'Żółków (Wisłoka)',
    '149210080': 'Jasło (Jasiołka)',
    '149210090': 'Krempna-Kotań (Wisłoka)',
    '149210100': 'Zboiska (Jasiołka)',
    '149210110': 'Krosno (Wisłok)',
    '149210120': 'Godowa (Stobnica)',
    '149210130': 'Żarnowa (Wisłok)',
    '149210140': 'Iskrzynia (Morwawa)',
    '149210150': 'Puławy (Wisłok)',
    '149210160': 'Sieniawa (Wisłok)',
    '149220010': 'Nowosielce (Pielnica)',
    '149220020': 'Szczawne (Osława)',
    '149220030': 'Olchowce (San)',
    '149220040': 'Dynów (San)',
    '149220050': 'Zagórz (Osława)',
    '149220060': 'Lesko (San)',
    '149220070': 'Hoczew (Hoczewka)',
    '149220080': 'Cisna (Solinka)',
    '149220100': 'Terka (Solinka)',
    '149220110': 'Kalnica (Wetlina)',
    '149220130': 'Zatwarnica (San)',
    '149220140': 'Polana (Czarny)',
    '149220150': 'Dwernik (San)',
    '149220180': 'Stuposiany (Wołosaty)',
    '149220190': 'Przemyśl (San)',
    '149220200': 'Krówniki (Wiar)',
    '149220210': 'Nienowice (Wisznia)',
    '150140020': 'Sieniawka (Nysa Łużycka)',
    '150140030': 'Turoszów (Miedzianka)',
    '150140100': 'Bogatynia (Miedzianka)',
    '150150010': 'Mirsk (Kwisa)',
    '150150020': 'Mirsk 2 (Czarny Potok)',
    '150150030': 'Jakuszyce (Kamienna)',
    '150150040': 'Barcinek (Kamienica)',
    '150150050': 'Piechowice (Kamienna)',
    '150150060': 'Pilchowice (Bóbr)',
    '150150070': 'Jelenia Góra 2 (Kamienna)',
    '150150080': 'Jelenia Góra (Bóbr)',
    '150150090': 'Łomnica (Łomnica)',
    '150150100': 'Wojanów (Bóbr)',
    '150150110': 'Kowary (Jedlica)',
    '150150120': 'Bukówka (Bóbr)',
    '150150130': 'Błażkowa (Bóbr)',
    '150150190': 'Podgórzyn (Podgórna)',
    '150150200': 'Sosnówka (Sośniak)',
    '150160010': 'Kamienna Góra (Bóbr)',
    '150160020': 'Świebodzice (Pełcznica)',
    '150160030': 'Chwaliszów (Strzegomka)',
    '150160040': 'Kudowa Zdrój-Zakrze (Klikawa)',
    '150160060': 'Jugowice (Bystrzyca)',
    '150160070': 'Lubachów (Bystrzyca)',
    '150160080': 'Tłumaczów (Ścinawka)',
    '150160090': 'Łażany (Strzegomka)',
    '150160100': 'Gorzuchów (Ścinawka)',
    '150160110': 'Szalejów Dolny (Bystrzyca Dusznicka)',
    '150160120': 'Krasków (Bystrzyca)',
    '150160130': 'Mościsko (Piława)',
    '150160140': 'Dzierżoniów (Piława)',
    '150160150': 'Bystrzyca Kłodzka 2 (Bystrzyca)',
    '150160160': 'Mietków (Bystrzyca)',
    '150160170': 'Bystrzyca Kłodzka (Nysa Kłodzka)',
    '150160180': 'Kłodzko (Nysa Kłodzka)',
    '150160190': 'Międzylesie (Nysa Kłodzka)',
    '150160200': 'Żelazno (Biała Lądecka)',
    '150160210': 'Wilkanów (Wilczka)',
    '150160220': 'Bardo Śląskie (Nysa Kłodzka)',
    '150160230': 'Lądek Zdrój (Biała Lądecka)',
    '150160250': 'Białobrzezie (Ślęza)',
    '150160270': 'Kamieniec Ząbkowicki (Budzówka)',
    '150160280': 'Borów (Ślęza)',
    '150160290': 'Gniechowice (Czarna Woda)',
    '150170010': 'Zborowice (Oława)',
    '150170030': 'Oława 2 (Oława)',
    '150170040': 'Oława (Odra)',
    '150170050': 'Biała Nyska (Biała Głuchołaska)',
    '150170060': 'Nysa (Nysa Kłodzka)',
    '150170070': 'Głuchołazy (Biała Głuchołaska)',
    '150170080': 'Jarnołtówek (Złoty Potok)',
    '150170090': 'Brzeg (most) (Odra)',
    '150170100': 'Kopice (Nysa Kłodzka)',
    '150170110': 'Prudnik (Prudnik)',
    '150170120': 'Niemodlin (Ścinawa Niemodlińska)',
    '150170130': 'Ujście Nysy Kłodzkiej (Odra)',
    '150170140': 'Skorogoszcz (Nysa Kłodzka)',
    '150170150': 'Karłowice (Wapienniki) (Stobrawa)',
    '150170160': 'Branice 1 (Opawa)',
    '150170170': 'Branice 2 (Młynówka)',
    '150170180': 'Racławice Śląskie (Osobłoga)',
    '150170200': 'Domaradz (Bogacica)',
    '150170220': 'Dobra (Biała)',
    '150170290': 'Opole - Groszowice (Odra)',
    '150180010': 'Kamionka (Stradunia)',
    '150180020': 'Turawa (Mała Panew)',
    '150180030': 'Koźle (Odra)',
    '150180040': 'Bojanów (Psina)',
    '150180050': 'Ozimek (Mała Panew)',
    '150180060': 'Racibórz Miedonia (Odra)',
    '150180070': 'Lenartowice (Kłodnica)',
    '150180080': 'Grabówka (Bierawka)',
    '150180100': 'Staniszcze Wielkie (Mała Panew)',
    '150180110': 'Ruda Kozielska (Ruda)',
    '150180130': 'Rybnik Stodoły (Ruda)',
    '150180150': 'Pyskowice Dzierżno (Kłodnica)',
    '150180160': 'Pyskowice Dzierżno (Drama)',
    '150180170': 'Pyskowice (Drama)',
    '150180180': 'Gliwice-Łabędy (Kłodnica)',
    '150180190': 'Krupski Młyn (Mała Panew)',
    '150180210': 'Niwki (Liswarta)',
    '150180220': 'Gliwice (Kłodnica)',
    '150180270': 'Kozłowa Góra (Brynica)',
    '150180280': 'Rybnik Gotartowice (Ruda)',
    '150190010': 'Brynica (Brynica)',
    '150190060': 'Bojszowy (Gostynia)',
    '150190070': 'Szabelnia (-)',
    '150190080': 'Radocha (Czarna Przemsza)',
    '150190100': 'Niwka (Biała Przemsza)',
    '150190120': 'Przeczyce (Czarna Przemsza)',
    '150190130': 'Łagisza (Czarna Przemsza)',
    '150190140': 'Bieruń Nowy (Wisła)',
    '150190150': 'Poraj (Warta)',
    '150190160': 'Oświęcim (Soła)',
    '150190170': 'Pustynia (Wisła)',
    '150190180': 'Jeleń (Przemsza)',
    '150190190': 'Piwoń (Przemsza)',
    '150190200': 'Lgota Nadwarcie (Warta)',
    '150190210': 'Kuźnica Sulikowska (Mitręga)',
    '150190240': 'Kręciwilk (Warta)',
    '150190260': 'Smolice (Wisła)',
    '150190280': 'Wąsosz (Pilica)',
    '150190310': 'Balice (Rudawa)',
    '150190330': 'Ojców (Prądnik)',
    '150190340': 'Kraków - Bielany (Wisła)',
    '150190350': 'Januszewice (Czarna)',
    '150190360': 'Gromiec (Wisła)',
    '150200010': 'Mniszek (Biała Nida)',
    '150200020': 'Bocheniec (Wierna Rzeka)',
    '150200030': 'Brzegi (Nida)',
    '150200040': 'Tokarnia (Czarna Nida)',
    '150200050': 'Michałów (Mierzawa)',
    '150200060': 'Sierosławice (Wisła)',
    '150200070': 'Biskupice (Szreniawa)',
    '150200080': 'Pinczów (Nida)',
    '150200090': 'Slowik (Bobrza)',
    '150200100': 'Popędzynka (Wisła)',
    '150200120': 'Morawica (Czarna Nida)',
    '150200140': 'Borzęcin (Uszwica)',
    '150200150': 'Karsy (Wisła)',
    '150200160': 'Daleszyce (Czarna Nida)',
    '150200170': 'Żabno (Dunajec)',
    '150210010': 'Raków (Czarna)',
    '150210020': 'Szczucin (Wisła)',
    '150210030': 'Mocha (Łagowica)',
    '150210040': 'Rzepin (Świślin)',
    '150210060': 'Staszów (Czarna)',
    '150210070': 'Wampierzów (Bren)',
    '150210080': 'Nietulisko Duże (Kamienna)',
    '150210090': 'Kunów (Kamienna)',
    '150210100': 'Połaniec (Czarna)',
    '150210110': 'Głowaczowa (Grabinianka)',
    '150210120': 'Mielec 2 (Wisłoka)',
    '150210130': 'Pustków (Wisłoka)',
    '150210140': 'Brzeźnica (Wielopolka)',
    '150210150': 'Koło (Wisła)',
    '150210160': 'Koprzywnica (Koprzywianka)',
    '150210170': 'Sandomierz (Wisła)',
    '150210180': 'Annopol (Wisła)',
    '150210190': 'Zawichost (Wisła)',
    '150210200': 'Grębów (Łęg)',
    '150210210': 'Radomysl (San)',
    '150210220': 'Włochy (Pokrzywianka)',
    '150220010': 'Rzeszów (Wisłok)',
    '150220020': 'Ruda Jastkowska (Bukowa)',
    '150220030': 'Nisko (San)',
    '150220040': 'Sarzyna (Trzebośnica)',
    '150220050': 'Harasiuki (Tanew)',
    '150220060': 'Gorliczyna (Mleczka Zachodnia)',
    '150220070': 'Rzuchów (San)',
    '150220080': 'Tryńcza (Wisłok)',
    '150220090': 'Leżachów (San)',
    '150220100': 'Jarosław (San)',
    '150220110': 'Biłgoraj (Biała Łada)',
    '150220120': 'Zakłodzie (Pór)',
    '150220130': 'Zapałów (Lubaczówka)',
    '150220140': 'Charytany (Szkło)',
    '150220160': 'Osuchy (Tanew)',
    '150230010': 'Nielisz (Wieprz)',
    '150230040': 'Krasnystaw (Wieprz)',
    '150230070': 'Gozdów (Huczwa)',
    '150230080': 'Michałów (Wieprz)',
    '150240010': 'Strzyżów (Bug)',
    '150240020': 'Kryłów (Bug)',
    '151140010': 'Gubin (Nysa Łużycka)',
    '151140020': 'Pleśno (Lubsza)',
    '151140030': 'Przewoźniki (Skroda)',
    '151140040': 'Przewóz (Nysa Łużycka)',
    '151140050': 'Ręczyn (Witka)',
    '151140060': 'Zgorzelec (Nysa Łużycka)',
    '151150020': 'Ostróżno (Witka)',
    '151150030': 'Iłowa (Czerna Mała)',
    '151150040': 'Nowogród Bobrzański (Bóbr)',
    '151150050': 'Dobroszów Wielki (Bóbr)',
    '151150060': 'Leśna (Kwisa)',
    '151150070': 'Żagań (Czerna Wielka)',
    '151150080': 'Żagań (Bóbr)',
    '151150090': 'Łozy (Kwisa)',
    '151150100': 'Nowogrodziec (Kwisa)',
    '151150110': 'Gryfów Śląski (Kwisa)',
    '151150120': 'Szprotawa (Bóbr)',
    '151150130': 'Szprotawa 2 (Szprotawa)',
    '151150140': 'Dąbrowa Bolesławiecka (Bóbr)',
    '151150150': 'Nowa Sól (Odra)',
    '151150160': 'Zagrodno (Skora)',
    '151150170': 'Świerzawa (Kaczawa)',
    '151150180': 'Chojnów (Skora)',
    '151160020': 'Rzymówka (Kaczawa)',
    '151160040': 'Bukowna (Czarna Woda)',
    '151160050': 'Dunino (Kaczawa)',
    '151160060': 'Głogów (Odra)',
    '151160070': 'Winnica (Nysa Szalona)',
    '151160080': 'Rzeszotary (Czarna Woda)',
    '151160090': 'Jawor (Nysa Szalona)',
    '151160100': 'Piątnica (Kaczawa)',
    '151160130': 'Ścinawa (Odra)',
    '151160140': 'Osetno (Barycz)',
    '151160150': 'Malczyce (Odra)',
    '151160160': 'Rydzyna (Polski Rów)',
    '151160170': 'Brzeg Dolny (Odra)',
    '151160180': 'Bogdaszowice (Strzegomka)',
    '151160190': 'Jarnołtów (Bystrzyca)',
    '151160200': 'Korzeńsko (Orla)',
    '151160220': 'Kanclerzowice (Sąsiecznica)',
    '151160230': 'Ślęza (Ślęza)',
    '151170010': 'Krzyżanowice (Widawa)',
    '151170030': 'Trestno (Odra)',
    '151170040': 'Łąki (Barycz)',
    '151170050': 'Zbytowa (Widawa)',
    '151170060': 'Bogdaj (Polska Woda)',
    '151170070': 'Odolanów (Barycz)',
    '151170080': 'Odolanów 2 (Kuroch)',
    '151170090': 'Namysłów (Widawa)',
    '151170110': 'Bogusław (Prosna)',
    '151180010': 'Ołobok (Ołobok)',
    '151180020': 'Piwonice (Prosna)',
    '151180030': 'Kuźnica Skakawska (Niesób)',
    '151180040': 'Mirków (Prosna)',
    '151180050': 'Dębe (Swędrnia)',
    '151180060': 'Kraszewice (Łużyca)',
    '151180070': 'Gorzów Śląski (Prosna)',
    '151180080': 'Sieradz (Warta)',
    '151180090': 'Niechmirów (Oleśnica)',
    '151180100': 'Osjaków (Warta)',
    '151180110': 'Uniejów (Warta)',
    '151180120': 'Burzenin (Warta)',
    '151180130': 'Działoszyn (Warta)',
    '151180140': 'Podgórze (Widawka)',
    '151180150': 'Widawa (Nieciecz)',
    '151180160': 'Poddębice (Ner)',
    '151180170': 'Rogóźno (Widawka)',
    '151180180': 'Grabno (Grabia)',
    '151190010': 'Kule (Liswarta)',
    '151190020': 'Szczerców (Widawka)',
    '151190030': 'Łask (Grabia)',
    '151190040': 'Lutomiersk (Ner)',
    '151190060': 'Bobry (Warta)',
    '151190080': 'Kłudzice (Luciąża)',
    '151190090': 'Przedbórz (Pilica)',
    '151190100': 'Sulejów (Pilica)',
    '151190120': 'Dąbrowa (Czarna)',
    '151200020': 'Spała (Pilica)',
    '151200080': 'Odrzywół (Drzewiczka)',
    '151200090': 'Nowe Miasto/Pilicą (Pilica)',
    '151200100': 'Bzin (Kamienna)',
    '151200120': 'Białobrzegi (Pilica)',
    '151210010': 'Wąchock (Kamienna)',
    '151210020': 'Michałów 2 (Kamienna)',
    '151210040': 'Brody Iłżeckie (Kamienna)',
    '151210050': 'Gusin (Wiała)',
    '151210060': 'Rogożek (Radomka)',
    '151210080': 'Kazanów (Iłżanka)',
    '151210090': 'Czekarzewice (Kamienna)',
    '151210120': 'Dęblin (Wisła)',
    '151210190': 'Puławy (Wisła)',
    '151220010': 'Kośmin (Wieprz)',
    '151220080': 'Tchórzew (Tyśmienica)',
    '151220090': 'Lubartów (Wieprz)',
    '151220100': 'Sobianowice (Bystrzyca)',
    '151230010': 'Trawniki (Wieprz)',
    '151230040': 'Włodawa (Bug)',
    '151230060': 'Dorohusk (Bug)',
    '152140010': 'Bielinek (Odra)',
    '152140020': 'Gozdowice (Odra)',
    '152140050': 'Słubice (Odra)',
    '152140060': 'Kostrzyn n. Odrą (Odra)',
    '152140070': 'Kostrzyn n. Odrą (Warta)',
    '152140090': 'Biała Góra (Odra)',
    '152140130': 'Połęcko (Odra)',
    '152150010': 'Świerkocin (Warta)',
    '152150020': 'Stary Raduszec (Bóbr)',
    '152150040': 'Gorzów Wielkopolski (Warta)',
    '152150050': 'Nietków (Odra)',
    '152150080': 'Santok 2 (Warta)',
    '152150090': 'Santok (Noteć)',
    '152150100': 'Bledzew (Obra)',
    '152150110': 'Skwierzyna (Warta)',
    '152150130': 'Cigacice (Odra)',
    '152150140': 'Gościmiec (Noteć)',
    '152150190': 'Nowe Drezdenko (Noteć)',
    '152150200': 'Międzychód (Warta)',
    '152150240': 'Drawiny (Drawa)',
    '152150270': 'Zbąszyń (jez. Błędno)',
    '152160010': 'Krzyż (Noteć)',
    '152160050': 'Wronki (Warta)',
    '152160070': 'Czarnków (Noteć)',
    '152160090': 'Kościan (Kanał Mosiński)',
    '152160100': 'Oborniki (Warta)',
    '152160110': 'Kowanówko (Wełna)',
    '152160120': 'Ryczywół (Flinta)',
    '152160130': 'Mosin (Kanał Mosiński)',
    '152160140': 'Poznań Most Rocha (Warta)',
    '152170010': 'Śrem (Warta)',
    '152170060': 'Nowa Wieś Podgórna (Warta)',
    '152170080': 'Pyzdry (Warta)',
    '152170120': 'Samarzewo (Wrześnica)',
    '152170130': 'Ląd (Warta)',
    '152170150': 'Trąbczyn (Bawół)',
    '152180030': 'Pakość (Noteć)',
    '152180050': 'Sławsk (Warta)',
    '152180060': 'Posoka (Powa)',
    '152180110': 'Kościelec (Kiełbaska)',
    '152180120': 'Koło (Warta)',
    '152180140': 'Grzegorzew (Rgilewka)',
    '152180150': 'Dąbie (Ner)',
    '152180160': 'Konin-Morzysław (Kanał Ślesiński)',
    '152180170': 'Popowo (Zb. Gopło)',
    '152190030': 'Włocławek (Wisła)',
    '152190050': 'Kwiatkówek (Bzura)',
    '152190100': 'Bielawy (Mroga)',
    '152190120': 'Kępa Polska (Wisła)',
    '152200010': 'Kęszyce (Rawka)',
    '152200020': 'Trzciniec (Wkra)',
    '152200030': 'Wyszogród (Wisła)',
    '152200050': 'Żuków (Bzura)',
    '152200090': 'Krubice (Utrata)',
    '152200110': 'Modlin (Wisła)',
    '152200120': 'Borkowo (Wkra)',
    '152200130': 'Orzechowo (Narew)',
    '152200150': 'Wychódźc (Wisła)',
    '152210010': 'Warszawa (Wisła)',
    '152210020': 'Piaseczno (Jeziorka)',
    '152210030': 'Maków Mazowiecki (Orzyc)',
    '152210040': 'Warszawa - Nadwilanówka (Wisła)',
    '152210060': 'Zambski Kościelne (Narew)',
    '152210070': 'Wólka Mlądzka (Świder)',
    '152210090': 'Wyszków (Bug)',
    '152210100': 'Czarnowo (Orz)',
    '152210120': 'Łochów (Liwiec)',
    '152210150': 'Popowo (Zb. Dębe)',
    '152210170': 'Warszawa-Bulwary (Wisła)',
    '152220010': 'Zaliwie-Piegawki (Liwiec)',
    '152220050': 'Frankopol (Bug)',
    '152220070': 'Brańsk (Nurzec)',
    '152220080': 'Suraż (Narew)',
    '152229999': 'Małkinia (Bug)',
    '152230030': 'Chraboły (Orlanka)',
    '152230040': 'Ploski (Narew)',
    '152230070': 'Malowa Góra (Krzna)',
    '152230080': 'Krzyczew (Bug)',
    '152230090': 'Narew (Narew)',
    '152230100': 'Narewka (Narewka)',
    '152230110': 'Bondary - Siemianówka (Zb Siemianówka)',
    '152230120': 'Bondary - Siemianówka (Zb Siemianówka)',
    '152230190': 'Białowieża (Narewka)',
    '152230200': 'Zabuże (Bug)',
    '153140010': 'Świnoujście (Zatoka Pomorska (ujście Świny))',
    '153140020': 'Widuchowa (Odra)',
    '153140030': 'Gryfino (Odra)',
    '153140040': 'Trzebież (Zalew Szczeciński)',
    '153140050': 'Szczecin (Odra)',
    '153140060': 'Wolin (Dziwna)',
    '153140070': 'Dziwnów (Dziwna)',
    '153140090': 'Goleniów (Ina)',
    '153140190': 'Regalica Szczecin (Regalica)',
    '153140200': 'Morzyczyn (jez.Miedwie)',
    '153150010': 'Stargard (Ina)',
    '153150050': 'Resko (Rega)',
    '153160020': 'Tychówko (Parsęta)',
    '153160040': 'Czaplinek (jez. Drawsko)',
    '153160170': 'Ujście (Noteć)',
    '153160180': 'Piła (Gwda)',
    '153160210': 'Ptusza (Gwda)',
    '153160300': 'Wielimie (jez. Wielimskie)',
    '153170010': 'Białośliwie (Noteć)',
    '153170040': 'Wyrzysk (Łobżonka)',
    '153170100': 'Nakło-Zachód (Noteć)',
    '153170120': 'Tuchola (Brda)',
    '153170140': 'Smukała (Brda)',
    '153180010': 'Czarna Woda (Wda)',
    '153180020': 'Fordon (Wisła)',
    '153180030': 'Bożepole (Wierzyca)',
    '153180060': 'Krąplewice (Wda)',
    '153180080': 'Chełmno (Wisła)',
    '153180090': 'Toruń (Wisła)',
    '153180100': 'Grudziądz (Wisła)',
    '153180110': 'Brody Pomorskie (Wierzyca)',
    '153180120': 'Hel (Bałtyk)',
    '153180130': 'Kwidzyn (Liwa)',
    '153180140': 'Elgiszewo (Drwęca)',
    '153180150': 'Rogóźno (Osa)',
    '153190040': 'Bągart (Dzierzgoń)',
    '153190050': 'Brodnica (Drwęca)',
    '153190090': 'Nowe Miasto Lubawskie (Drwęca)',
    '153190120': 'Rodzone (Drwęca)',
    '153190130': 'Kuligi (Nowe Miasto) (Wel)',
    '153190150': 'Lidzbark (Wel)',
    '153190170': 'Ostróda (Jez. Drwęckie)',
    '153200020': 'Szreńsk (Mławka)',
    '153200030': 'Kalisty (Pasłęka)',
    '153200040': 'Tomaryny (Pasłęka)',
    '153200070': 'Olsztyn (Łyna)',
    '153200090': 'Szypry (Jez. Wadąg)',
    '153210070': 'Białobrzeg Bliższy (Omulew)',
    '153210090': 'Ostrołęka (Narew)',
    '153210120': 'Walery (Rozoga)',
    '153210140': 'Szkwa (Szkwa)',
    '153210170': 'Ptaki (Pisa)',
    '153210180': 'Zaruzie (Ruź)',
    '153210190': 'Pisz (Pisa)',
    '153210200': 'Maldanin (Jez. Roś)',
    '153210210': 'Nowogród (Narew)',
    '153210220': 'Dobrylas (Pisa)',
    '153220010': 'Piątnica-Łomża (Narew)',
    '153220050': 'Ełk 2 (Jez. Ełckie)',
    '153220060': 'Ełk (Ełk)',
    '153220070': 'Wizna (Narew)',
    '153220080': 'Prostki (Ełk)',
    '153220090': 'Czachy (Wissa)',
    '153220100': 'Burzyn (Biebrza)',
    '153220130': 'Strękowa Góra (Narew)',
    '153220140': 'Przechody (Ełk (Kanał.Rudzki))',
    '153220160': 'Osowiec 2 (Ełk (Kanał Rudzki))',
    '153220170': 'Osowiec (Biebrza)',
    '153220180': 'Zawady (Ślina)',
    '153220190': 'Rajgród 2 (Jez.Rajgrodzkie)',
    '153220200': 'Rajgród (Jegrznia)',
    '153220230': 'Kulesze Chobotki (Nereśl)',
    '153220260': 'Dębowo (Biebrza)',
    '153220270': 'Babino (Narew)',
    '153220280': 'Białobrzegi (Netta)',
    '153230010': 'Fasty (Supraśl)',
    '153230020': 'Karpowicze (Brzozówka)',
    '153230060': 'Zawady (Biała)',
    '153230070': 'Sztabin (Biebrza)',
    '153230080': 'Sochonie (Czarna)',
    '153230110': 'Supraśl (Supraśl)',
    '153230130': 'Harasimowicze (Sidra)',
    '153230170': 'Nowosiółki (Supraśl)',
    '154150010': 'Trzebiatów (Rega)',
    '154150030': 'Kołobrzeg (Bałtyk)',
    '154150040': 'Bardy (Parsęta)',
    '154150050': 'Białogard (Parsęta)',
    '154160020': 'Białogórzyno (Radew)',
    '154160070': 'Stary Kraków (Wieprza)',
    '154160110': 'Ustka (Bałtyk)',
    '154160120': 'Korzybie (Wieprza)',
    '154160150': 'Darłowo (Wieprza)',
    '154170010': 'Słupsk (Słupia)',
    '154170060': 'Smołdzino (Łupawa)',
    '154170080': 'Łupawa (Łupawa)',
    '154170090': 'Izbica (Jez. Łebsko)',
    '154170100': 'Łeba (Bałtyk)',
    '154170120': 'Soszyca (Słupia)',
    '154170160': 'Lębork (Łeba)',
    '154170190': 'Borucino (Jez. Raduńskie Górne)',
    '154180020': 'Miłoszewo (Łeba)',
    '154180060': 'Goręczyno (Radunia)',
    '154180080': 'Wejherowo (Reda)',
    '154180090': 'Puck (Zatoka Pucka)',
    '154180100': 'Władysławowo (Bałtyk)',
    '154180120': 'Gdynia (Bałtyk)',
    '154180140': 'Gdańsk (-)',
    '154180150': 'Tczew (Wisła)',
    '154180160': 'Sobieszewo (Martwa Wisła)',
    '154180170': 'Wiślina (Motława)',
    '154180180': 'Suchy Dąb (Bielawa)',
    '154180190': 'Przegalina (Wisła)',
    '154180200': 'Świbno (Wisła)',
    '154180210': 'Ujście Wisły (Wisła)',
    '154180220': 'Gdańska Głowa (Wisła)',
    '154180260': 'Pruszcz Gdański_kanał (Kanał Raduni)',
    '154180270': 'Pruszcz Gdański (Radunia)',
    '154190010': 'Nowy Dwór Gdański (Święta)',
    '154190020': 'Tujsk (Szkarpawa)',
    '154190030': 'Osłonka (Zalew Wiślany)',
    '154190040': 'Dolna Kępa (Nogat)',
    '154190050': 'Nowe Batorowo (Zalew Wiślany)',
    '154190060': 'Elbląg (Elbląg)',
    '154190080': 'Żukowo (Jez. Drużno)',
    '154190090': 'Tolkmicko (Zalew Wiślany)',
    '154190100': 'Pasłęk (Wąska)',
    '154190110': 'Nowe Sadłuki (Bauda)',
    '154190130': 'Nowa Pasłęka (Zalew Wiślany)',
    '154190140': 'Braniewo (Pasłęka)',
    '154190150': 'Pierzchały (Jez. Pierzchalskie; Pasłęka)',
    '154190160': 'Pierzchały (Jez. Pierzchalskie; Pasłęka)',
    '154190170': 'Łozy (Pasłęka)',
    '154200010': 'Bornity (Wałsza)',
    '154200020': 'Krosno (Drwęca Warmińska)',
    '154200030': 'Smolajny (Łyna)',
    '154210010': 'Sępopol (Łyna)',
    '154210020': 'Prosna (Guber)',
    '154210060': 'Przystań (Jez. Mamry)',
    '154210070': 'Węgorzewo (Węgorapa)',
    '154210080': 'Prynowo (Węgorapa)',
    '154210090': 'Giżycko (Pisa (Kanał Giżycki))',
    '154210100': 'Mieduniszki (Węgorapa)',
    '154220010': 'Banie Mazurskie (Gołdapa)',
    '154220050': 'Jurkiszki (Jarka)',
    '154220110': 'Gołdap 2 (Gołdapa)',
  })
# ---
# name: test_weather_station
  WeatherData(temperature=SensorData(name='Temperature', value=0.8, unit='°C'), humidity=SensorData(name='Humidity', value=93.0, unit='%'), pressure=SensorData(name='Pressure', value=1022.1, unit='hPa'), wind_speed=SensorData(name='Wind Speed', value=1.0, unit='m/s'), wind_direction=SensorData(name='Wind Direction', value=310.0, unit='°'), precipitation=SensorData(name='Precipitation', value=18.1, unit='mm'), station='Bielsko Biała', station_id='12600', measurement_date=datetime.datetime(2024, 4, 22, 7, 0, tzinfo=datetime.timezone.utc))
# ---
# name: test_weather_stations
  dict({
    '12001': 'Platforma',
    '12100': 'Kołobrzeg',
    '12105': 'Koszalin',
    '12115': 'Ustka',
    '12120': 'Łeba',
    '12125': 'Lębork',
    '12135': 'Hel',
    '12155': 'Gdańsk',
    '12160': 'Elbląg',
    '12185': 'Kętrzyn',
    '12195': 'Suwałki',
    '12200': 'Świnoujście',
    '12205': 'Szczecin',
    '12210': 'Resko',
    '12215': 'Szczecinek',
    '12230': 'Piła',
    '12235': 'Chojnice',
    '12250': 'Toruń',
    '12270': 'Mława',
    '12272': 'Olsztyn',
    '12280': 'Mikołajki',
    '12285': 'Ostrołęka',
    '12295': 'Białystok',
    '12300': 'Gorzów',
    '12310': 'Słubice',
    '12330': 'Poznań',
    '12345': 'Koło',
    '12360': 'Płock',
    '12375': 'Warszawa',
    '12385': 'Siedlce',
    '12399': 'Terespol',
    '12400': 'Zielona Góra',
    '12415': 'Legnica',
    '12418': 'Leszno',
    '12424': 'Wrocław',
    '12435': 'Kalisz',
    '12455': 'Wieluń',
    '12465': 'Łódź',
    '12469': 'Sulejów',
    '12488': 'Kozienice',
    '12495': 'Lublin',
    '12497': 'Włodawa',
    '12500': 'Jelenia Góra',
    '12510': 'Śnieżka',
    '12520': 'Kłodzko',
    '12530': 'Opole',
    '12540': 'Racibórz',
    '12550': 'Częstochowa',
    '12560': 'Katowice',
    '12566': 'Kraków',
    '12570': 'Kielce',
    '12575': 'Tarnów',
    '12580': 'Rzeszów',
    '12585': 'Sandomierz',
    '12595': 'Zamość',
    '12600': 'Bielsko Biała',
    '12625': 'Zakopane',
    '12650': 'Kasprowy Wierch',
    '12660': 'Nowy Sącz',
    '12670': 'Krosno',
    '12690': 'Lesko',
    '12695': 'Przemyśl',
  })
# ---
